add SG:ICMP rule
