# pkg/api/common/ip-transport.pb.go
@@ -21,6 +21,56 @@ const (
 	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
 )
 
+// IP version
+type IPv int32
+
+const (
+	IPv__  IPv = 0
+	IPv_V4 IPv = 1 //IPv4
+	IPv_V6 IPv = 2 //IPv6
+)
+
+// Enum value maps for IPv.
+var (
+	IPv_name = map[int32]string{
+		0: "_",
+		1: "V4",
+		2: "V6",
+	}
+	IPv_value = map[string]int32{
+		"_":  0,
+		"V4": 1,
+		"V6": 2,
+	}
+)
+
+func (x IPv) Enum() *IPv {
+	p := new(IPv)
+	*p = x
+	return p
+}
+
+func (x IPv) String() string {
+	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
+}
+
+func (IPv) Descriptor() protoreflect.EnumDescriptor {
+	return file_common_ip_transport_proto_enumTypes[0].Descriptor()
+}
+
+func (IPv) Type() protoreflect.EnumType {
+	return &file_common_ip_transport_proto_enumTypes[0]
+}
+
+func (x IPv) Number() protoreflect.EnumNumber {
+	return protoreflect.EnumNumber(x)
+}
+
+// Deprecated: Use IPv.Descriptor instead.
+func (IPv) EnumDescriptor() ([]byte, []int) {
+	return file_common_ip_transport_proto_rawDescGZIP(), []int{0}
+}
+
 //Transport: represents net transport (L4)
 type Networks_NetIP_Transport int32
 
@@ -52,11 +102,11 @@ func (x Networks_NetIP_Transport) String() string {
 }
 
 func (Networks_NetIP_Transport) Descriptor() protoreflect.EnumDescriptor {
-	return file_common_ip_transport_proto_enumTypes[0].Descriptor()
+	return file_common_ip_transport_proto_enumTypes[1].Descriptor()
 }
 
 func (Networks_NetIP_Transport) Type() protoreflect.EnumType {
-	return &file_common_ip_transport_proto_enumTypes[0]
+	return &file_common_ip_transport_proto_enumTypes[1]
 }
 
 func (x Networks_NetIP_Transport) Number() protoreflect.EnumNumber {
@@ -107,6 +157,62 @@ func (*Networks) Descriptor() ([]byte, []int) {
 	return file_common_ip_transport_proto_rawDescGZIP(), []int{0}
 }
 
+// IP/ICMP protocol
+type ICMP struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	IPv   IPv      `protobuf:"varint,1,opt,name=IPv,proto3,enum=common.IPv" json:"IPv,omitempty"`
+	Types []uint32 `protobuf:"varint,2,rep,packed,name=Types,proto3" json:"Types,omitempty"` // ICMP message types
+}
+
+func (x *ICMP) Reset() {
+	*x = ICMP{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_common_ip_transport_proto_msgTypes[1]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *ICMP) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*ICMP) ProtoMessage() {}
+
+func (x *ICMP) ProtoReflect() protoreflect.Message {
+	mi := &file_common_ip_transport_proto_msgTypes[1]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use ICMP.ProtoReflect.Descriptor instead.
+func (*ICMP) Descriptor() ([]byte, []int) {
+	return file_common_ip_transport_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *ICMP) GetIPv() IPv {
+	if x != nil {
+		return x.IPv
+	}
+	return IPv__
+}
+
+func (x *ICMP) GetTypes() []uint32 {
+	if x != nil {
+		return x.Types
+	}
+	return nil
+}
+
 //NetIP: represents IP-Network type (L3)
 type Networks_NetIP struct {
 	state         protoimpl.MessageState
@@ -120,7 +226,7 @@ type Networks_NetIP struct {
 func (x *Networks_NetIP) Reset() {
 	*x = Networks_NetIP{}
 	if protoimpl.UnsafeEnabled {
-		mi := &file_common_ip_transport_proto_msgTypes[1]
+		mi := &file_common_ip_transport_proto_msgTypes[2]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		ms.StoreMessageInfo(mi)
 	}
@@ -133,7 +239,7 @@ func (x *Networks_NetIP) String() string {
 func (*Networks_NetIP) ProtoMessage() {}
 
 func (x *Networks_NetIP) ProtoReflect() protoreflect.Message {
-	mi := &file_common_ip_transport_proto_msgTypes[1]
+	mi := &file_common_ip_transport_proto_msgTypes[2]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -171,7 +277,7 @@ type Networks_NetIP_PortRange struct {
 func (x *Networks_NetIP_PortRange) Reset() {
 	*x = Networks_NetIP_PortRange{}
 	if protoimpl.UnsafeEnabled {
-		mi := &file_common_ip_transport_proto_msgTypes[2]
+		mi := &file_common_ip_transport_proto_msgTypes[3]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		ms.StoreMessageInfo(mi)
 	}
@@ -184,7 +290,7 @@ func (x *Networks_NetIP_PortRange) String() string {
 func (*Networks_NetIP_PortRange) ProtoMessage() {}
 
 func (x *Networks_NetIP_PortRange) ProtoReflect() protoreflect.Message {
-	mi := &file_common_ip_transport_proto_msgTypes[2]
+	mi := &file_common_ip_transport_proto_msgTypes[3]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -228,11 +334,17 @@ var file_common_ip_transport_proto_rawDesc = []byte{
 	0x72, 0x6f, 0x6d, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0d, 0x52, 0x04, 0x66, 0x72, 0x6f, 0x6d, 0x12,
 	0x0e, 0x0a, 0x02, 0x74, 0x6f, 0x18, 0x02, 0x20, 0x01, 0x28, 0x0d, 0x52, 0x02, 0x74, 0x6f, 0x22,
 	0x1d, 0x0a, 0x09, 0x54, 0x72, 0x61, 0x6e, 0x73, 0x70, 0x6f, 0x72, 0x74, 0x12, 0x07, 0x0a, 0x03,
-	0x54, 0x43, 0x50, 0x10, 0x00, 0x12, 0x07, 0x0a, 0x03, 0x55, 0x44, 0x50, 0x10, 0x01, 0x42, 0x2e,
-	0x5a, 0x2c, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x48, 0x2d, 0x42,
-	0x46, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x73, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x61, 0x70, 0x69,
-	0x2f, 0x63, 0x6f, 0x6d, 0x6d, 0x6f, 0x6e, 0x3b, 0x63, 0x6f, 0x6d, 0x6d, 0x6f, 0x6e, 0x62, 0x06,
-	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x54, 0x43, 0x50, 0x10, 0x00, 0x12, 0x07, 0x0a, 0x03, 0x55, 0x44, 0x50, 0x10, 0x01, 0x22, 0x3b,
+	0x0a, 0x04, 0x49, 0x43, 0x4d, 0x50, 0x12, 0x1d, 0x0a, 0x03, 0x49, 0x50, 0x76, 0x18, 0x01, 0x20,
+	0x01, 0x28, 0x0e, 0x32, 0x0b, 0x2e, 0x63, 0x6f, 0x6d, 0x6d, 0x6f, 0x6e, 0x2e, 0x49, 0x50, 0x76,
+	0x52, 0x03, 0x49, 0x50, 0x76, 0x12, 0x14, 0x0a, 0x05, 0x54, 0x79, 0x70, 0x65, 0x73, 0x18, 0x02,
+	0x20, 0x03, 0x28, 0x0d, 0x52, 0x05, 0x54, 0x79, 0x70, 0x65, 0x73, 0x2a, 0x1c, 0x0a, 0x03, 0x49,
+	0x50, 0x76, 0x12, 0x05, 0x0a, 0x01, 0x5f, 0x10, 0x00, 0x12, 0x06, 0x0a, 0x02, 0x56, 0x34, 0x10,
+	0x01, 0x12, 0x06, 0x0a, 0x02, 0x56, 0x36, 0x10, 0x02, 0x42, 0x2e, 0x5a, 0x2c, 0x67, 0x69, 0x74,
+	0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x48, 0x2d, 0x42, 0x46, 0x2f, 0x70, 0x72, 0x6f,
+	0x74, 0x6f, 0x73, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x63, 0x6f, 0x6d, 0x6d,
+	0x6f, 0x6e, 0x3b, 0x63, 0x6f, 0x6d, 0x6d, 0x6f, 0x6e, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f,
+	0x33,
 }
 
 var (
@@ -247,20 +359,23 @@ func file_common_ip_transport_proto_rawDescGZIP() []byte {
 	return file_common_ip_transport_proto_rawDescData
 }
 
-var file_common_ip_transport_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
-var file_common_ip_transport_proto_msgTypes = make([]protoimpl.MessageInfo, 3)
+var file_common_ip_transport_proto_enumTypes = make([]protoimpl.EnumInfo, 2)
+var file_common_ip_transport_proto_msgTypes = make([]protoimpl.MessageInfo, 4)
 var file_common_ip_transport_proto_goTypes = []interface{}{
-	(Networks_NetIP_Transport)(0),    // 0: common.Networks.NetIP.Transport
-	(*Networks)(nil),                 // 1: common.Networks
-	(*Networks_NetIP)(nil),           // 2: common.Networks.NetIP
-	(*Networks_NetIP_PortRange)(nil), // 3: common.Networks.NetIP.PortRange
+	(IPv)(0),                         // 0: common.IPv
+	(Networks_NetIP_Transport)(0),    // 1: common.Networks.NetIP.Transport
+	(*Networks)(nil),                 // 2: common.Networks
+	(*ICMP)(nil),                     // 3: common.ICMP
+	(*Networks_NetIP)(nil),           // 4: common.Networks.NetIP
+	(*Networks_NetIP_PortRange)(nil), // 5: common.Networks.NetIP.PortRange
 }
 var file_common_ip_transport_proto_depIdxs = []int32{
-	0, // [0:0] is the sub-list for method output_type
-	0, // [0:0] is the sub-list for method input_type
-	0, // [0:0] is the sub-list for extension type_name
-	0, // [0:0] is the sub-list for extension extendee
-	0, // [0:0] is the sub-list for field type_name
+	0, // 0: common.ICMP.IPv:type_name -> common.IPv
+	1, // [1:1] is the sub-list for method output_type
+	1, // [1:1] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
 }
 
 func init() { file_common_ip_transport_proto_init() }
@@ -282,7 +397,7 @@ func file_common_ip_transport_proto_init() {
 			}
 		}
 		file_common_ip_transport_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
-			switch v := v.(*Networks_NetIP); i {
+			switch v := v.(*ICMP); i {
 			case 0:
 				return &v.state
 			case 1:
@@ -294,6 +409,18 @@ func file_common_ip_transport_proto_init() {
 			}
 		}
 		file_common_ip_transport_proto_msgTypes[2].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*Networks_NetIP); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_common_ip_transport_proto_msgTypes[3].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*Networks_NetIP_PortRange); i {
 			case 0:
 				return &v.state
@@ -311,8 +438,8 @@ func file_common_ip_transport_proto_init() {
 		File: protoimpl.DescBuilder{
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_common_ip_transport_proto_rawDesc,
-			NumEnums:      1,
-			NumMessages:   3,
+			NumEnums:      2,
+			NumMessages:   4,
 			NumExtensions: 0,
 			NumServices:   0,
 		},
