# pkg/api/sgroups/api.swagger.json
@@ -195,6 +195,39 @@
         ]
       }
     },
+    "/v1/sg-icmp/rules": {
+      "post": {
+        "description": "FindSgIcmpRules: finds SG:ICMP Rule(s) scoped by variety SG",
+        "operationId": "SecGroupService_FindSgIcmpRules",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/sgroupsSgIcmpRulesResp"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/sgroupsFindSgIcmpRulesReq"
+            }
+          }
+        ],
+        "tags": [
+          "SecGroupService"
+        ]
+      }
+    },
     "/v1/sg/{sgName}/subnets": {
       "get": {
         "description": "GetSgSubnets: gets Networks related to SG",
@@ -359,6 +392,32 @@
       "description": "- FullSync: FullSync: Delete+Insert+Update operations (default)\n - Upsert: Upsert: Insert+Update operations\n - Delete: Delete: Delete operation",
       "title": "SyncOp: sync operation"
     },
+    "commonICMP": {
+      "type": "object",
+      "properties": {
+        "IPv": {
+          "$ref": "#/definitions/commonIPv"
+        },
+        "Types": {
+          "type": "array",
+          "items": {
+            "type": "integer",
+            "format": "int64"
+          }
+        }
+      },
+      "title": "IP/ICMP protocol"
+    },
+    "commonIPv": {
+      "type": "string",
+      "enum": [
+        "_",
+        "V4",
+        "V6"
+      ],
+      "default": "_",
+      "title": "IP version"
+    },
     "protobufAny": {
       "type": "object",
       "properties": {
@@ -438,6 +497,22 @@
       "required": [
         "sgFrom",
         "sgTo"
+      ]
+    },
+    "sgroupsFindSgIcmpRulesReq": {
+      "type": "object",
+      "properties": {
+        "sg": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "title": "scope GS name item(s)"
+        }
+      },
+      "title": "FindSgIcmpRulesReq: req to find all SG:ICMP Rule(s) scoped by SG(s) variety",
+      "required": [
+        "sg"
       ]
     },
     "sgroupsFqdnRule": {
@@ -648,6 +723,41 @@
         "name"
       ]
     },
+    "sgroupsSgIcmpRule": {
+      "type": "object",
+      "properties": {
+        "Sg": {
+          "type": "string",
+          "title": "Security group name"
+        },
+        "ICMP": {
+          "$ref": "#/definitions/commonICMP",
+          "title": "ICMP spec"
+        },
+        "logs": {
+          "type": "boolean",
+          "title": "logs: switch-{ON|OFF} logs in rules"
+        },
+        "trace": {
+          "type": "boolean",
+          "title": "trace: switch-{ON|OFF} trace in rules"
+        }
+      },
+      "title": "SG:ICMP type rule"
+    },
+    "sgroupsSgIcmpRulesResp": {
+      "type": "object",
+      "properties": {
+        "rules": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/sgroupsSgIcmpRule"
+          },
+          "title": "SgIcmp rule item(s)"
+        }
+      },
+      "title": "FindSgIcmpRulesResp: FQDN Rule(s) resp"
+    },
     "sgroupsSyncFqdnRules": {
       "type": "object",
       "properties": {
@@ -696,6 +806,10 @@
         "fqdnRules": {
           "$ref": "#/definitions/sgroupsSyncFqdnRules",
           "title": "subject of FQDN Rule(s)"
+        },
+        "sgIcmpRules": {
+          "$ref": "#/definitions/sgroupsSyncSgIcmpRules",
+          "title": "subject of SG:ICMP Rule(s)"
         }
       },
       "title": "SyncReq: request to apply changes in DB for one of subject [Networks|Sucurity Groups|Security Grpups Rules]"
@@ -725,6 +839,18 @@
         }
       },
       "title": "SyncSecurityGroups: subject of Security Groups to Sync"
+    },
+    "sgroupsSyncSgIcmpRules": {
+      "type": "object",
+      "properties": {
+        "rules": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/sgroupsSgIcmpRule"
+          }
+        }
+      },
+      "title": "SyncSgIcmpRules: subject of SyncSgIcmpRule to Sync"
     },
     "sgroupsSyncStatusResp": {
       "type": "object",
